FrontEnd/assets/style.css
/* ... */
table {
  border-collapse: collapse;
  border-spacing: 0;
}
/** end reset css**/

/* Général */

* {
  box-sizing: border-box;
}

body {
  width: 100vw;
  height: 100vh;
  background: #e5e5e5;
  font-family: "Work Sans", sans-serif;
  font-size: 14px;
  margin: auto;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

.container-general {
  max-width: 1140px;
  width: 100%;
  margin: auto;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

a {
  text-decoration: none;
  color: #000000;
}

h2 {
  font-family: "Syne", sans-serif;
  font-weight: 700;
  font-size: 30px;
  color: #1d6154;
}

/*barre de navigation et boutons pour mode admin*/

.admin-nav {
  height: 59px;
  width: 100%;
  background: #000000;
  color: #ffffff;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 30px;
  display: none;
}

.edition {
  font-size: 16px;
  font-weight: 400;
  text-align: center;
}

.publish {
  color: #000000;
  background: #ffffff;
  font-size: 14px;
  font-weight: 500;
  line-height: 16px;
  text-align: center;
  border-radius: 60px;
  width: 216px;
  height: 38px;
}

.modifier {
  display: none;
  cursor: pointer;
}
.modifier .fa-regular {
  border: none;
  margin-right: 5px;
}

/* header */

header {
  display: flex;
  justify-content: space-between;
  margin-top: 50px;
}

h1 {
  display: flex;
  flex-direction: column;
  font-family: "Syne", sans-serif;
  font-size: 22px;
  font-weight: 800;
  color: #b1663c;
}

h1 > span {
  font-family: "Work Sans", sans-serif;
  font-size: 10px;
  font-weight: 400;
  margin-top: 8px;
  margin-bottom: 0px;
  letter-spacing: 0.05em;
}

nav ul {
  display: flex;
  align-items: center;
  list-style-type: none;
  margin-top: 10px;
}
nav li {
  font-size: 16px;
  font-weight: 400;
  margin-left: 40px;
  padding-bottom: 14px;
}
li button {
  border: none;
  background: #e5e5e5;
  font-family: "Work Sans", sans-serif;
  font-size: 16px;
  font-weight: 400;
}

.login-link {
  cursor: pointer;
}

li img {
  height: 16px;
  width: 16px;
  margin-left: 14px;
}

li button:hover {
  font-weight: 700;
}

/* Main */

main {
  width: 85%;
  margin: 0 12.5%;
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
}

/* Section Indrotuction */

#introduction {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 139px 0px 139px 0px;
  position: relative;
}

.introduction {
  margin-left: 8%;
}

#introduction figure {
  flex: 1;
  display: flex;
  flex-flow: row wrap;
  gap: 15px;
}
#introduction img {
  display: flex;
  justify-content: left;
  margin: 0px;
  width: 100%;
}

#introduction article {
  flex: 1;
  padding: 0;
}
#introduction h2 {
  text-align: left;
  margin-bottom: 0.6em;
}

#introduction p {
  text-align: left;
  margin-bottom: 0.5em;
  font-size: 14px;
  font-weight: 400;
  width: 92%;
}

#bouton-modifier-introduction {
  display: none;
  position: absolute;
  top: 5%;
}

/* section Portfolio with filter buttons*/

#portfolio h2 {
  text-align: center;
}

.mes-projets {
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  gap: 31px;
  margin-bottom: 30px;
}

.btns-filter {
  display: flex;
  justify-content: center;
  gap: 10px;
  padding-top: 20px;
  padding-bottom: 50px;
  width: 100%;
}
.btn-filter {
  font-family: "Syne", sans-serif;
  font-size: 16px;
  font-weight: 700;
  text-align: center;
  background-color: #e5e5e5;
  color: #1d6154;
}
#btn-Tous {
  border: 1px solid #1d6154;
  border-radius: 60px;
  padding: 8px 28px 8px 28px;
  outline: 0;
}

#btn-Tous:focus,
#btn-Objets:focus,
#btn-Appartements:focus,
#btn-Hotels:focus {
  background-color: #1d6154;
  color: #ffffff;
}

#btn-Objets {
  border: 1px solid #1d6154;
  border-radius: 60px;
  padding: 8px 20px 8px 20px;
}

#btn-Appartements {
  border: 1px solid #1d6154;
  border-radius: 60px;
  padding: 8px 14px 8px 14px;
}

#btn-Hotels {
  border: 1px solid #1d6154;
  border-radius: 60px;
  padding: 8px 10px 8px 9px;
}

/* div gallery */

.gallery {
  width: 95%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-column-gap: 18px;
  grid-row-gap: 18px;
}

.gallery img {
  height: 410px;
  width: 100%;
  object-fit: contain;
}
.gallery figcaption {
  font-family: "work sans";
  font-size: 13px;
  font-weight: 400;
  text-align: left;
}

/* Form  section contact*/

#contact {
  width: 50%;
  margin: auto;
  margin-top: 57px;
}
#contact > * {
  text-align: center;
}

#contact form {
  display: flex;
  flex-direction: column;
  text-align: left;
}

#contact input {
  height: 50px;
  border: none;
  font-size: 1.2em;
}

#contact label {
  font-family: "work-sans";
  font-size: 14px;
  font-weight: 500;
  margin: 38px 0 7px 0;
}
#contact textarea {
  border: none;
  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

input[type="submit"] {
  width: 180px;
  background-color: #1d6154;
  border: none;
  border-radius: 60px;
  color: white;
  font-size: 14px;
  font-family: "Syne";
  font-weight: 700;
  margin: 2.5em auto;
  text-align: center;
}

#contact input[type="submit"]:active {
  background-color: #000000;
  color: white;
}

/* Footer*/

footer nav ul {
  margin-right: 7.4%;
  display: flex;
  justify-content: end;
}

/*Partie login*/

.login-page {
  font-weight: 700;
}

.form {
  background: #e5e5e5;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.form .input {
  display: flex;
  flex-direction: column;
  margin: 2px 0px 30px 0px;
  padding: 5px;
}
.input input[type="submit"] {
  padding: 10px 38px 9px 39px;
}

.input input[type="password"],
.input input[type="email"] {
  height: 49px;
  width: 379px;
  border: none;
  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
  cursor: default;
}

label {
  width: 100%;
  background: #e5e5e5;
  font-family: "work sans";
  font-size: 14px;
  font-weight: 500;
  margin-top: 30px;
  margin-bottom: 7px;
  text-align: left;
}

::placeholder {
  background: #ffffff;
}
/* ... */

